simplepos/compiler/SimplePOSParser.py
# Generated from SimplePOS.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO

# -*- coding: utf-8 -*-
"""
    Copyright © 2017 - Alexandre Machado <axmachado@gmail.com>

    This file is part of Simple POS Compiler.

    Simnple POS Compiler is free software: you can redistribute it
    and/or modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation, either version 3
    of the License, or (at your option) any later version.

    Simple POS Compiler is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Simple POS Compiler. If not, see <http://www.gnu.org/licenses/>.


    @author: Alexandre Machado <axmachado@gmail.com>

"""



class SimplePOSParser ( Parser ):

    grammarFileName = "SimplePOS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'global'", "'const'", "'extern'", 
                     "'int'", "'string'", "'void'", "'true'", "'false'", 
                     "'if'", "'else'", "'while'", "'break'", "'for'", "'return'", 
                     "'callmodule'", "'('", "')'", "'{'", "'}'", "','", 
                     "';'", "'&'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'", "'!'", "'&&'", "'||'", "'>'", "'<'", "'>='", 
                     "'<='", "'=='", "'!='", "'++'", "'--'" ]

    symbolicNames = [ "<INVALID>", "MODULE", "GLOBAL", "CONST", "EXTERN", 
                      "INT", "STRING", "VOID", "TRUE", "FALSE", "IF", "ELSE", 
                      "WHILE", "BREAK", "FOR", "RETURN", "EXECMODULE", "LPAR", 
                      "RPAR", "LCURL", "RCURL", "COMMA", "SEMICOLOM", "REFMARK", 
                      "ASSIGN", "PLUS", "MINUS", "TIMES", "SLASH", "MOD", 
                      "EXP", "NOT", "AND", "OR", "GT", "LT", "GE", "LE", 
                      "EQ", "NE", "INCOPER", "DECOPER", "BLOCK_COMMENT", 
                      "ID", "DIGIT", "STRVALUE", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                      "WS" ]

    RULE_sourcefile = 0
    RULE_moduledef = 1
    RULE_constblock = 2
    RULE_vardefblock = 3
    RULE_functiondef = 4
    RULE_vardef_item = 5
    RULE_vardef = 6
    RULE_constdef_item = 7
    RULE_constdef = 8
    RULE_typename = 9
    RULE_argdef = 10
    RULE_arglist = 11
    RULE_stmlist = 12
    RULE_stm = 13
    RULE_simplestm = 14
    RULE_stmline = 15
    RULE_modulecall = 16
    RULE_functioncall = 17
    RULE_paramlist = 18
    RULE_returnstm = 19
    RULE_value = 20
    RULE_expression = 21
    RULE_add_sub = 22
    RULE_term = 23
    RULE_times_div = 24
    RULE_factor = 25
    RULE_rexp = 26
    RULE_atom = 27
    RULE_log_expression = 28
    RULE_log_oper = 29
    RULE_log_term = 30
    RULE_log_rel = 31
    RULE_assignment = 32
    RULE_blockstm = 33
    RULE_intvalue = 34
    RULE_ifelse = 35
    RULE_whilestm = 36
    RULE_forstm = 37

    ruleNames =  [ "sourcefile", "moduledef", "constblock", "vardefblock", 
                   "functiondef", "vardef_item", "vardef", "constdef_item", 
                   "constdef", "typename", "argdef", "arglist", "stmlist", 
                   "stm", "simplestm", "stmline", "modulecall", "functioncall", 
                   "paramlist", "returnstm", "value", "expression", "add_sub", 
                   "term", "times_div", "factor", "rexp", "atom", "log_expression", 
                   "log_oper", "log_term", "log_rel", "assignment", "blockstm", 
                   "intvalue", "ifelse", "whilestm", "forstm" ]

    EOF = Token.EOF
    MODULE=1
    GLOBAL=2
    CONST=3
    EXTERN=4
    INT=5
    STRING=6
    VOID=7
    TRUE=8
    FALSE=9
    IF=10
    ELSE=11
    WHILE=12
    BREAK=13
    FOR=14
    RETURN=15
    EXECMODULE=16
    LPAR=17
    RPAR=18
    LCURL=19
    RCURL=20
    COMMA=21
    SEMICOLOM=22
    REFMARK=23
    ASSIGN=24
    PLUS=25
    MINUS=26
    TIMES=27
    SLASH=28
    MOD=29
    EXP=30
    NOT=31
    AND=32
    OR=33
    GT=34
    LT=35
    GE=36
    LE=37
    EQ=38
    NE=39
    INCOPER=40
    DECOPER=41
    BLOCK_COMMENT=42
    ID=43
    DIGIT=44
    STRVALUE=45
    SINGLELINE_COMMENT=46
    MULTILINE_COMMENT=47
    WS=48

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SourcefileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmlist(self):
            return self.getTypedRuleContext(SimplePOSParser.StmlistContext,0)


        def EOF(self):
            return self.getToken(SimplePOSParser.EOF, 0)

        def moduledef(self):
            return self.getTypedRuleContext(SimplePOSParser.ModuledefContext,0)


        def constblock(self):
            return self.getTypedRuleContext(SimplePOSParser.ConstblockContext,0)


        def vardefblock(self):
            return self.getTypedRuleContext(SimplePOSParser.VardefblockContext,0)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_sourcefile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourcefile" ):
                listener.enterSourcefile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourcefile" ):
                listener.exitSourcefile(self)




    def sourcefile(self):

        localctx = SimplePOSParser.SourcefileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourcefile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.MODULE:
                self.state = 76
                self.moduledef()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.CONST or _la==SimplePOSParser.EXTERN:
                self.state = 79
                self.constblock()


            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 82
                self.vardefblock()


            self.state = 85
            self.stmlist()
            self.state = 86
            self.match(SimplePOSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModuledefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(SimplePOSParser.MODULE, 0)

        def ID(self):
            return self.getToken(SimplePOSParser.ID, 0)

        def SEMICOLOM(self):
            return self.getToken(SimplePOSParser.SEMICOLOM, 0)

        def LPAR(self):
            return self.getToken(SimplePOSParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(SimplePOSParser.RPAR, 0)

        def arglist(self):
            return self.getTypedRuleContext(SimplePOSParser.ArglistContext,0)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_moduledef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuledef" ):
                listener.enterModuledef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuledef" ):
                listener.exitModuledef(self)




    def moduledef(self):

        localctx = SimplePOSParser.ModuledefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduledef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SimplePOSParser.MODULE)
            self.state = 89
            self.match(SimplePOSParser.ID)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.LPAR:
                self.state = 90
                self.match(SimplePOSParser.LPAR)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SimplePOSParser.INT or _la==SimplePOSParser.STRING:
                    self.state = 91
                    self.arglist()


                self.state = 94
                self.match(SimplePOSParser.RPAR)


            self.state = 97
            self.match(SimplePOSParser.SEMICOLOM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePOSParser.ConstdefContext)
            else:
                return self.getTypedRuleContext(SimplePOSParser.ConstdefContext,i)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_constblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstblock" ):
                listener.enterConstblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstblock" ):
                listener.exitConstblock(self)




    def constblock(self):

        localctx = SimplePOSParser.ConstblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99
                self.constdef()
                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimplePOSParser.CONST or _la==SimplePOSParser.EXTERN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardefblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePOSParser.VardefContext)
            else:
                return self.getTypedRuleContext(SimplePOSParser.VardefContext,i)


        def LCURL(self):
            return self.getToken(SimplePOSParser.LCURL, 0)

        def RCURL(self):
            return self.getToken(SimplePOSParser.RCURL, 0)

        def getRuleIndex(self):
            return SimplePOSParser.RULE_vardefblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardefblock" ):
                listener.enterVardefblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardefblock" ):
                listener.exitVardefblock(self)




    def vardefblock(self):

        localctx = SimplePOSParser.VardefblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardefblock)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimplePOSParser.GLOBAL, SimplePOSParser.INT, SimplePOSParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 104
                        self.vardef()

                    else:
                        raise NoViableAltException(self)
                    self.state = 107 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            elif token in [SimplePOSParser.LCURL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(SimplePOSParser.LCURL)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 110
                    self.vardef()
                    self.state = 113 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePOSParser.GLOBAL) | (1 << SimplePOSParser.INT) | (1 << SimplePOSParser.STRING))) != 0)):
                        break

                self.state = 115
                self.match(SimplePOSParser.RCURL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctiondefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplePOSParser.ID, 0)

        def LPAR(self):
            return self.getToken(SimplePOSParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(SimplePOSParser.RPAR, 0)

        def LCURL(self):
            return self.getToken(SimplePOSParser.LCURL, 0)

        def stmlist(self):
            return self.getTypedRuleContext(SimplePOSParser.StmlistContext,0)


        def RCURL(self):
            return self.getToken(SimplePOSParser.RCURL, 0)

        def typename(self):
            return self.getTypedRuleContext(SimplePOSParser.TypenameContext,0)


        def VOID(self):
            return self.getToken(SimplePOSParser.VOID, 0)

        def arglist(self):
            return self.getTypedRuleContext(SimplePOSParser.ArglistContext,0)


        def vardefblock(self):
            return self.getTypedRuleContext(SimplePOSParser.VardefblockContext,0)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_functiondef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctiondef" ):
                listener.enterFunctiondef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctiondef" ):
                listener.exitFunctiondef(self)




    def functiondef(self):

        localctx = SimplePOSParser.FunctiondefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functiondef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimplePOSParser.INT, SimplePOSParser.STRING]:
                self.state = 119
                self.typename()
                pass
            elif token in [SimplePOSParser.VOID]:
                self.state = 120
                self.match(SimplePOSParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 123
            self.match(SimplePOSParser.ID)
            self.state = 124
            self.match(SimplePOSParser.LPAR)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.INT or _la==SimplePOSParser.STRING:
                self.state = 125
                self.arglist()


            self.state = 128
            self.match(SimplePOSParser.RPAR)
            self.state = 129
            self.match(SimplePOSParser.LCURL)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 130
                self.vardefblock()


            self.state = 133
            self.stmlist()
            self.state = 134
            self.match(SimplePOSParser.RCURL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vardef_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplePOSParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SimplePOSParser.ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(SimplePOSParser.ValueContext,0)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_vardef_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardef_item" ):
                listener.enterVardef_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardef_item" ):
                listener.exitVardef_item(self)




    def vardef_item(self):

        localctx = SimplePOSParser.Vardef_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardef_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SimplePOSParser.ID)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.ASSIGN:
                self.state = 137
                self.match(SimplePOSParser.ASSIGN)
                self.state = 138
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(SimplePOSParser.TypenameContext,0)


        def vardef_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePOSParser.Vardef_itemContext)
            else:
                return self.getTypedRuleContext(SimplePOSParser.Vardef_itemContext,i)


        def SEMICOLOM(self):
            return self.getToken(SimplePOSParser.SEMICOLOM, 0)

        def GLOBAL(self):
            return self.getToken(SimplePOSParser.GLOBAL, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimplePOSParser.COMMA)
            else:
                return self.getToken(SimplePOSParser.COMMA, i)

        def getRuleIndex(self):
            return SimplePOSParser.RULE_vardef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardef" ):
                listener.enterVardef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardef" ):
                listener.exitVardef(self)




    def vardef(self):

        localctx = SimplePOSParser.VardefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.GLOBAL:
                self.state = 141
                self.match(SimplePOSParser.GLOBAL)


            self.state = 144
            self.typename()
            self.state = 145
            self.vardef_item()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimplePOSParser.COMMA:
                self.state = 146
                self.match(SimplePOSParser.COMMA)
                self.state = 147
                self.vardef_item()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(SimplePOSParser.SEMICOLOM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Constdef_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplePOSParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SimplePOSParser.ASSIGN, 0)

        def STRVALUE(self):
            return self.getToken(SimplePOSParser.STRVALUE, 0)

        def intvalue(self):
            return self.getTypedRuleContext(SimplePOSParser.IntvalueContext,0)


        def getRuleIndex(self):
            return SimplePOSParser.RULE_constdef_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdef_item" ):
                listener.enterConstdef_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdef_item" ):
                listener.exitConstdef_item(self)




    def constdef_item(self):

        localctx = SimplePOSParser.Constdef_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constdef_item)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(SimplePOSParser.ID)
                self.state = 156
                self.match(SimplePOSParser.ASSIGN)
                self.state = 157
                self.match(SimplePOSParser.STRVALUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(SimplePOSParser.ID)
                self.state = 159
                self.match(SimplePOSParser.ASSIGN)
                self.state = 160
                self.intvalue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(SimplePOSParser.CONST, 0)

        def constdef_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePOSParser.Constdef_itemContext)
            else:
                return self.getTypedRuleContext(SimplePOSParser.Constdef_itemContext,i)


        def SEMICOLOM(self):
            return self.getToken(SimplePOSParser.SEMICOLOM, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimplePOSParser.COMMA)
            else:
                return self.getToken(SimplePOSParser.COMMA, i)

        def EXTERN(self):
            return self.getToken(SimplePOSParser.EXTERN, 0)

        def typename(self):
            return self.getTypedRuleContext(SimplePOSParser.TypenameContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimplePOSParser.ID)
            else:
                return self.getToken(SimplePOSParser.ID, i)

        def getRuleIndex(self):
            return SimplePOSParser.RULE_constdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdef" ):
                listener.enterConstdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdef" ):
                listener.exitConstdef(self)




    def constdef(self):

        localctx = SimplePOSParser.ConstdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constdef)
        self._la = 0 # Token type
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimplePOSParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(SimplePOSParser.CONST)
                self.state = 164
                self.constdef_item()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimplePOSParser.COMMA:
                    self.state = 165
                    self.match(SimplePOSParser.COMMA)
                    self.state = 166
                    self.constdef_item()
                    self.state = 171
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 172
                self.match(SimplePOSParser.SEMICOLOM)
                pass
            elif token in [SimplePOSParser.EXTERN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(SimplePOSParser.EXTERN)
                self.state = 175
                self.match(SimplePOSParser.CONST)
                self.state = 176
                self.typename()
                self.state = 177
                self.match(SimplePOSParser.ID)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimplePOSParser.COMMA:
                    self.state = 178
                    self.match(SimplePOSParser.COMMA)
                    self.state = 179
                    self.match(SimplePOSParser.ID)
                    self.state = 184
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 185
                self.match(SimplePOSParser.SEMICOLOM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SimplePOSParser.INT, 0)

        def STRING(self):
            return self.getToken(SimplePOSParser.STRING, 0)

        def getRuleIndex(self):
            return SimplePOSParser.RULE_typename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypename" ):
                listener.enterTypename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypename" ):
                listener.exitTypename(self)




    def typename(self):

        localctx = SimplePOSParser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typename)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            _la = self._input.LA(1)
            if not(_la==SimplePOSParser.INT or _la==SimplePOSParser.STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(SimplePOSParser.TypenameContext,0)


        def ID(self):
            return self.getToken(SimplePOSParser.ID, 0)

        def REFMARK(self):
            return self.getToken(SimplePOSParser.REFMARK, 0)

        def getRuleIndex(self):
            return SimplePOSParser.RULE_argdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgdef" ):
                listener.enterArgdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgdef" ):
                listener.exitArgdef(self)




    def argdef(self):

        localctx = SimplePOSParser.ArgdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.typename()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePOSParser.REFMARK:
                self.state = 192
                self.match(SimplePOSParser.REFMARK)


            self.state = 195
            self.match(SimplePOSParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArglistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePOSParser.ArgdefContext)
            else:
                return self.getTypedRuleContext(SimplePOSParser.ArgdefContext,i)

